--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <h1>Align-Content</h1>
+<p>The align-content property is a sub-property of the Flexible Box Layout module.
+
+It helps aligning a flex container's lines within it when there is extra space in the cross-axis, similar to how justify-content aligns individual items within the main-axis.
+
+  Note, this property has no effect when the flexbox has only a single line.</p>
