--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <h1>Align-Content</h1>
 <p>The align-content property is a sub-property of the Flexible Box Layout module.
 
-It helps aligning a flex container's lines within it when there is extra space in the cross-axis, similar to how justify-content aligns individual items within the main-axis.
+It helps aligning a flex container's lines within it when there is extra space in the cross-axis,<br>
+similar to how justify-content aligns individual items within the main-axis.
 
-  Note, this property has no effect when the flexbox has only a single line.</p>
+  Note, this property has no effect when the flexbox has only a single line.
+The align-content property accepts 6 different values:</p>
+<ol>
+  <li>flex-start: lines packed to the start of the container</li>
+  <li>flex-end: lines packed to the end of the container</li>
+  <li>center: lines packed to the center of the container</li>
+  <li>space-between: lines evenly distributed; the first line is at the start of the container while the last one is at the end</li>
+  <li>space-around: lines evenly distributed with equal space between them</li>
+  <li>stretch (default): lines stretch to take up the remaining space</li>
+  <li></li>
+  <li></li>
+  </o>
