--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ It helps aligning a flex container's lines within it when there is extra space i
 similar to how justify-content aligns individual items within the main-axis.
 
   Note, this property has no effect when the flexbox has only a single line.
-The align-content property accepts 6 different values:</p>
+The align-content property accepts 6 different values:
+</p>
 <ol>
   <li>flex-start: lines packed to the start of the container</li>
   <li>flex-end: lines packed to the end of the container</li>
@@ -13,6 +14,4 @@ The align-content property accepts 6 different values:</p>
   <li>space-between: lines evenly distributed; the first line is at the start of the container while the last one is at the end</li>
   <li>space-around: lines evenly distributed with equal space between them</li>
   <li>stretch (default): lines stretch to take up the remaining space</li>
-  <li></li>
-  <li></li>
-  </o>
+ </o>
