--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+<title>Align-context</title>
+</head>
+<body>
 <h1>Align-Content</h1>
 <p>The align-content property is a sub-property of the Flexible Box Layout module.
 
@@ -15,3 +22,7 @@ The align-content property accepts 6 different values:
   <li>space-around: lines evenly distributed with equal space between them</li>
   <li>stretch (default): lines stretch to take up the remaining space</li>
  </o>
+  
+  
+  </body>
+  </html>
