--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <title>Align-context</title>
 </head>
 <body>
-<h1>Align-Content</h1>
+<h1>What Is The Align-Content</h1>
 <p>The align-content property is a sub-property of the Flexible Box Layout module.
 
 It helps aligning a flex container's lines within it when there is extra space in the cross-axis,<br>
 similar to how justify-content aligns individual items within the main-axis.
 
   Note, this property has no effect when the flexbox has only a single line.
-The align-content property accepts 6 different values:
+The align-content property accepts many different values such as:
 </p>
 <ol>
   <li>flex-start: lines packed to the start of the container</li>
